--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=anycomp-marketplace
+spring.datasource.url=jdbc:postgresql://localhost:5432/anycomp-marketplace
+spring.datasource.username=casey
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
