- Added ItemService, ItemController to resolve missing endpoints. - Commented out some endpoints in SellerController.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=anycomp-marketplace
-spring.datasource.url=jdbc:postgresql://localhost:5432/anycomp-marketplace
+spring.datasource.url=jdbc:postgresql://localhost:5432/anycomp-marketplace-db
 spring.datasource.username=casey
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
